# active_matcher

./: .gitignore  README.md  active_matcher.feature.html  active_matcher.html  active_matcher.tokenizer.html  genindex.html  index.html  modules.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: active_matcher.tokenizer.rst.txt  modules.rst.txt
_sources/api/: active_matcher.active_matcher.active_learning.rst.txt
_sources/doc/: active_matcher.active_learning.rst.txt  active_matcher.active_matcher.feature.rst.txt  active_matcher.active_matcher.rst.txt  active_matcher.active_matcher.tokenizer.rst.txt  active_matcher.feature.rst.txt  active_matcher.rst.txt  active_matcher.tokenizer.rst.txt
active_matcher/: active_learning.py  algorithms.py  example.py  feature_selector.py  fv_generator.py  labeler.py  ml_model.py  storage.py  utils.py
active_matcher/active_learning/: __init__.py  cont_entropy_active_learner.py  ent_active_learner.py
active_matcher/feature/: __init__.py  (+3 more)
doc/: active_matcher.rst  conf.py  gen_docs.sh  index.rst  install-macos-single-machine.md
examples/: Cluster-Example.md  Local-Example.md  Single-Machine-Example.md  active-matcher-training-data.parquet  advance-example.md  am_cluster_example.py  am_cluster_sampling_cal_example.py  am_local_cal_example.py  am_local_example.ipynb  am_local_example.py  am_local_sampling_cal_example.py  am_local_sampling_example.py  example.ipynb  example.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_feature_selector.py  test_fv_generator.py  test_labeler.py  test_ml_model.py  test_storage.py  test_utils.py
(+46 files in other folders)
